Added a bunch of query parameter and child graph options for diagnosis, supplemental, and facility
