# facilityAPI/controllers/Default.js
@@ -54,19 +54,48 @@ module.exports.getAllDiagnosis = function getAllDiagnosis (req, res, next) {
 
 
 module.exports.getAllSupplementals = function getAllSupplementals (req, res, next) {
-    Default.getAllSupplementals( function(result) {
+    var diagnosisId = req.swagger.params.diagnosis.value;
+    if (typeof diagnosisId !== 'undefined') {
+        Default.getSupplementalsByDiagnosis(diagnosisId, function(result) {
+            if (typeof result !== 'undefined') {
+                console.log(JSON.stringify(result))
+                res.setHeader('Content-Type', 'application/json');
+                res.end(JSON.stringify(result || {}, null, 2));
+            }
+            else
+                console.log("no such diagnosis " + diagnosisId);
+            res.end();
+        });
+    }
+    else {
+        Default.getAllSupplementals( function(result) {
+            if (typeof result !== 'undefined') {
+                console.log(JSON.stringify(result))
+
+                res.setHeader('Content-Type', 'application/json');
+                res.end(JSON.stringify(result || {}, null, 2));
+            }
+            else
+                console.log("no supplementals found");
+            res.end();
+        });
+    }
+};
+
+
+module.exports.getSupplementalById = function getSupplementalById (req, res, next) {
+    var supplementalId = req.swagger.params['supplementalId'].value;
+    Default.getSupplementalById(supplementalId, function(result) {
         if (typeof result !== 'undefined') {
             console.log(JSON.stringify(result))
-
             res.setHeader('Content-Type', 'application/json');
             res.end(JSON.stringify(result || {}, null, 2));
         }
         else
-            console.log("no diagnosis found");
+            console.log("no supplemental found");
         res.end();
     });
 };
-
 
 module.exports.getDiagnosisById = function getDiagnosisById (req, res, next) {
     var diagnosisId = req.swagger.params['diagnosisId'].value;
@@ -98,16 +127,17 @@ module.exports.getSupplementalsByDiagnosis = function getSupplementalsByDiagnosi
 
 module.exports.getFacilityById = function getFacilityById (req, res, next) {
     var facilityId = req.swagger.params['facilityId'].value;
-
-    var result = Default.getFacilityById(facilityId);
-
-    if(typeof result !== 'undefined') {
-        res.setHeader('Content-Type', 'application/json');
-        res.end(JSON.stringify(result || {}, null, 2));
-    }
-    else
+    var result = Default.getFacilityById(facilityId, function (result) {
+        if (typeof result !== 'undefined') {
+            console.log(JSON.stringify(result))
+            res.setHeader('Content-Type', 'application/json');
+            res.end(JSON.stringify(result || {}, null, 2));
+        }
+        else
+            console.log("no such facility " + facilityId);
         res.end();
-};
+    });
+}
 
 module.exports.getVisitsByFacility = function getVisitsByFacility (req, res, next) {
   var facilityId = req.swagger.params['facilityId'].value;
