# facilityAPI/swagger.json
@@ -261,7 +261,7 @@
     },
     "/diagnosis/{diagnosisId}": {
       "get": {
-        "summary": "",
+        "summary": "Diagnosis",
         "description": "Returns a diagnosis based on a single ID",
         "x-swagger-router-controller": "Default",
         "tags": [
@@ -294,9 +294,47 @@
         }
       }
     },
+    "/diagnosis/{diagnosisId}/supplementals": {
+      "get": {
+        "summary": "Supplementals of Diagnosis",
+        "description": "Returns an array of supplementals for the diagnosis",
+        "x-swagger-router-controller": "Default",
+        "tags": [
+          "Default"
+        ],
+        "operationId": "getSupplementalsByDiagnosis",
+        "parameters": [
+          {
+            "name": "diagnosisId",
+            "in": "path",
+            "description": "ID of diagnosis for the supplementals to fetch",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "supplementals response",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/supplemental"
+              }
+            }
+          },
+          "default": {
+            "description": "unexpected error",
+            "schema": {
+              "$ref": "#/definitions/errorModel"
+            }
+          }
+        }
+      }
+    },
     "/supplementals": {
       "get": {
-        "summary": "",
+        "summary": "Supplementals lookup list",
         "description": "The Supplementals endpoint returns the list of all diagnosis Supplementals that are currently registered with the API.",
         "x-swagger-router-controller": "Default",
         "tags": [
@@ -315,12 +353,47 @@
         ],
         "responses": {
           "200": {
-            "description": "diagnosis response",
+            "description": "supplementals response",
             "schema": {
               "type": "array",
               "items": {
-                "$ref": "#/definitions/diagnosis"
+                "$ref": "#/definitions/supplemental"
               }
+            }
+          },
+          "default": {
+            "description": "unexpected error",
+            "schema": {
+              "$ref": "#/definitions/errorModel"
+            }
+          }
+        }
+      }
+    },
+    "/supplementals/{supplementalId}": {
+      "get": {
+        "summary": "Supplemental",
+        "description": "Returns a supplemental based on a single ID",
+        "x-swagger-router-controller": "Default",
+        "tags": [
+          "Default"
+        ],
+        "operationId": "getSupplementalById",
+        "parameters": [
+          {
+            "name": "supplementalId",
+            "in": "path",
+            "description": "ID of supplemental to fetch",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "supplemental response",
+            "schema": {
+              "$ref": "#/definitions/supplemental"
             }
           },
           "default": {
